--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
           <target/>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <repoToken>oUA9HCjThdJMK7WpeR6JolTP3Il9Bzjh4</repoToken>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
