--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>GeometryLib</groupId>
   <artifactId>GeometryLib</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -15,10 +16,32 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.eluder.coveralls</groupId>
-        <artifactId>coveralls-maven-plugin</artifactId>
-        <version>3.1.0</version>
-      </plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<outputDirectory>${basedir}/target</outputDirectory>
+					<format>xml</format>
+					<maxmem>256m</maxmem>
+					<!-- aggregated reports for multi-module projects -->
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<coberturaReports>
+						<coberturaReport>
+							${basedir}/target/coverage.xml
+						</coberturaReport>
+					</coberturaReports>
+					<sourceEncoding>UTF-8</sourceEncoding>
+					<serviceName>travis-ci</serviceName>
+					<serviceJobId>${env.TRAVIS_JOB_ID} </serviceJobId>
+				</configuration>
+			</plugin>
     </plugins>
   </build>
 </project>
