--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>GeometryLib</groupId>
 	<artifactId>GeometryLib</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
+	
+	<properties>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -15,6 +19,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${finalName}</finalName>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
