--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,11 @@ deploy:
     secure: $GITPERM
   file:
     - "README.md"
-    - "target/GeometryLib-1.0.jar"
+    - "GeometryLib-1.0.jar"
   on:
     tags: false
     all_branches: true
 
 branches:
   except:
-    - /^*-v[0-9]/
+    - /^*-[0-9]/
