--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
 
+jdk:
+- oraclejdk8
+- oraclejdk7
+
 env:
   global:
    # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
