--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 jdk:
 - oraclejdk7
 
-script: mvn clean package
+script: mvn clean -DTRAVIS_JOB_ID=$TRAVIS_JOB_ID package cobertura:cobertura coveralls:report
 
 env:
   global:
@@ -16,12 +16,7 @@ addons:
     project:
       name: "dougmaitelli/GeometryLib"
       description: "Build submitted via Travis CI"
-    build_command_prepend: "mvn clean"
-    build_command: "mvn -DskipTests=true compile"
     branch_pattern: master
-
-after_success:
-- mvn clean -DTRAVIS_JOB_ID=$TRAVIS_JOB_ID cobertura:cobertura coveralls:report
 
 before_deploy:
   - git config --global user.email "builds@travis-ci.com"
