--- a/wercker.yml
+++ b/wercker.yml
@@ -1,1 +1,6 @@
 box: wercker/default
+
+build:
+    after-steps:
+        - wantedly/pretty-slack-notify:
+            webhook_url: $SLACK_WEBHOOK_URL
