--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,11 @@
 box: wercker/default
 
-steps:
-  - wantedly/pretty-slack-notify@0.2.10
-
-after-steps:
-  - wantedly/pretty-slack-notify:
-    webhook_url: $SLACK_WEBHOOK_URL
+build:
+  steps:
+    - script:
+      name: Build
+      code: |
+        mvn clean package
+  after-steps:
+    - wantedly/pretty-slack-notify:
+      webhook_url: $SLACK_WEBHOOK_URL
