Fix Released Tag Name

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 - oraclejdk8
 
 before_script:
-- export GIT_TAG=$TRAVIS_BRANCH-1.0.$TRAVIS_BUILD_NUMBER
+- export GIT_TAG=$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER
 - export FINALNAME=GeometryLib-$GIT_TAG
 
 script: mvn clean -DTRAVIS_JOB_ID=$TRAVIS_JOB_ID package cobertura:cobertura -DfinalName=$FINALNAME
