--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,9 @@
 					<maxmem>256m</maxmem>
 					<!-- aggregated reports for multi-module projects -->
 					<aggregate>true</aggregate>
+					<instrumentation>
+						<ignoreTrivial>true</ignoreTrivial>                 
+					</instrumentation>
 				</configuration>
 			</plugin>
 		</plugins>
